<resources>
    <string name="app_name">调光器</string>

    <string name="connect_title">培养箱调光软件</string>
    <string name="connect_ip">IP地址：</string>
    <string name="connect_port">端口号：</string>
    <string name="connect_button">连接</string>
    <string name="connect_ip_text">192.168.4.1</string>
    <string name="connect_port_text">333</string>

    <string name="title_mode_switch">模式切换</string>
    <string name="title_param_adjust">手动调整</string>
    <string name="title_data_show">数据显示</string>

    <string name="switch_bn_spring_fall">春秋季</string>
    <string name="switch_bn_summer">夏季</string>
    <string name="switch_bn_winter">冬季</string>
    <string name="switch_bn_sunny_day">晴天</string>
    <string name="switch_bn_cloudy_day">阴天</string>
    <string name="switch_bn_lightning">闪电</string>
    <string name="switch_bn_partly_cloudy">飘云</string>
    <string name="switch_bn_manual">手动</string>

    <string name="refresh">同步</string>
    <string name="switch_to_manual">切换为手动模式</string>

    <string name="led_value_1">LED1：</string>
    <string name="led_value_2">LED2：</string>
    <string name="led_value_3">LED3：</string>
    <string name="led_value_4">LED4：</string>

    <string name="work_mode">工作模式：</string>
    <string name="work_time">系统时间：</string>
    <string name="mode">模式</string>
    <string name="mode_not_connected">未连接</string>

    <string name="dialog_title">警告：</string>
    <string name="dialog_positive_button">确定</string>
    <string name="dialog_negative_button">取消</string>
    <string name="dialog_msg_connect_err">抱歉，设备连接失败，请检查后重试 ...</string>
    <string name="dialog_msg_data_parse_err">抱歉，数据解析出错，请联系作者进行修复 ...</string>
    <string name="dialog_msg_data_get_err">抱歉，数据同步失败，连接已关闭，请稍后重试 ...</string>
    <string name="dialog_msg_not_connect">抱歉，当前设备连接已断开，是否返回重新连接？</string>
    <string name="dialog_msg_connect_has_err">抱歉，设备连接出现异常，是否返回重新连接？</string>
    <string name="dialog_msg_not_respone">抱歉，设备无响应，是否返回重新连接？</string>
    <string name="dialog_msg_connecting">设备连接中，请稍后 ...</string>
    <string name="dialog_msg_data_getting">数据同步中，请稍后 ...</string>
    <string name="dialog_exit_title">提示：</string>
    <string name="dialog_exit_msg">是否返回到连接界面？</string>

    <string name="toast_msg_data_refreshing">数据同步中 ...</string>
    <string name="toast_msg_data_refresh_success">数据同步成功</string>
    <string name="toast_msg_data_refresh_err">抱歉，数据刷新失败，请稍后重试 ...</string>
    <string name="toast_msg_mode_switching">模式切换中 ...</string>
    <string name="toast_msg_mode_switch_success">模式切换成功</string>
    <string name="toast_msg_mode_switch_err">抱歉，模式切换失败 ...</string>
    <string name="toast_msg_param_adjusting">参数调整中 ...</string>
    <string name="toast_msg_param_adjust_success">参数调整成功</string>
    <string name="toast_msg_param_adjust_err">抱歉，参数调整失败 ...</string>
    <string name="toast_msg_edit_text_null">抱歉，请输入完整的 IP 地址和端口号 ...</string>
    <string name="toast_msg_connect_success">设备连接成功</string>

    <string name="about_title">关于</string>
    <string name="about_text">
        名称：培养箱调光软件
        \n所属：广东海洋大学物理协会
        \n作者：方块8
        \n版本：1.0
        \n说明：创客工作室出品
    </string>

</resources>
