<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout android:id="@+id/activity_main_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="10dp"
        android:background="@mipmap/bg_not_connected">
        <LinearLayout style="@style/ParamAdjustLayoutStyle.TitleViewStyle">
            <View style="@style/TitleViewLineStyle"/>
            <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/title_mode_switch" />
            <View style="@style/TitleViewLineStyle"/>
        </LinearLayout>
        <TableLayout style="@style/ViewsBackgroundStyle">
            <TableRow>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_spring_fall">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_spring_fall"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_spring_fall"/>
                </LinearLayout>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_summer">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_summer"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_summer"/>
                </LinearLayout>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_winter">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_winter"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_winter"/>
                </LinearLayout>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_refresh">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_refresh"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/refresh"/>
                </LinearLayout>
            </TableRow>
            <TableRow>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_sunny_day">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_sunny_day"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_sunny_day"/>
                </LinearLayout>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_cloudy_day">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_cloudy_day"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_cloudy_day"/>
                </LinearLayout>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_lightning">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_lightning"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_lightning"/>
                </LinearLayout>
                <LinearLayout style="@style/SwitchBnStyle" android:id="@+id/switch_bn_partly_cloudy">
                    <ImageView style="@style/WrapContentStyle" android:src="@mipmap/bn_normal_partly_cloudy"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/switch_bn_partly_cloudy"/>
                </LinearLayout>
            </TableRow>
        </TableLayout>
        <LinearLayout style="@style/ParamAdjustLayoutStyle.TitleViewStyle">
            <View style="@style/TitleViewLineStyle"/>
            <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/title_param_adjust" />
            <View style="@style/TitleViewLineStyle"/>
        </LinearLayout>
        <LinearLayout style="@style/ViewsBackgroundStyle" android:orientation="vertical">
            <LinearLayout style="@style/ParamAdjustLayoutStyle">
                <SeekBar style="@style/SeekBarStyle" android:id="@+id/led1_seekbar"/>
                <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/led_value_1"  android:id="@+id/led1_adjust_text"/>
            </LinearLayout>
            <LinearLayout style="@style/ParamAdjustLayoutStyle">
                <SeekBar style="@style/SeekBarStyle" android:id="@+id/led2_seekbar"/>
                <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/led_value_2" android:id="@+id/led2_adjust_text"/>
            </LinearLayout>
            <LinearLayout style="@style/ParamAdjustLayoutStyle">
                <SeekBar style="@style/SeekBarStyle" android:id="@+id/led3_seekbar"/>
                <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/led_value_3" android:id="@+id/led3_adjust_text"/>
            </LinearLayout>
            <LinearLayout style="@style/ParamAdjustLayoutStyle">
                <SeekBar style="@style/SeekBarStyle" android:id="@+id/led4_seekbar"/>
                <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/led_value_4" android:id="@+id/led4_adjust_text"/>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout style="@style/ParamAdjustLayoutStyle.TitleViewStyle">
            <View style="@style/TitleViewLineStyle"/>
            <TextView style="@style/WrapContentStyle.TextViewStyle" android:text="@string/title_data_show" />
            <View style="@style/TitleViewLineStyle"/>
        </LinearLayout>
        <LinearLayout style="@style/ViewsBackgroundStyle" android:orientation="vertical">
            <TableLayout android:layout_width="match_parent" android:layout_height="wrap_content">
                <TableRow android:paddingTop="10dp" android:paddingBottom="10dp">
                    <TextView style="@style/WrapContentStyle.TextViewStyle.WorkText" android:id="@+id/work_mode_text" android:text="@string/work_mode" />
                    <TextView style="@style/WrapContentStyle.TextViewStyle.WorkText" android:id="@+id/work_time_text" android:text="@string/work_time" />
                </TableRow>
                <TableRow>
                    <TextView style="@style/WrapContentStyle.TextViewStyle.LedState" android:id="@+id/led1_param_text" android:text="@string/led_value_1"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle.LedState" android:id="@+id/led2_param_text" android:text="@string/led_value_2"/>
                </TableRow>
                <TableRow>
                    <TextView style="@style/WrapContentStyle.TextViewStyle.LedState" android:id="@+id/led3_param_text" android:text="@string/led_value_3"/>
                    <TextView style="@style/WrapContentStyle.TextViewStyle.LedState" android:id="@+id/led4_param_text" android:text="@string/led_value_4"/>
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>