<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="25dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/views_background"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="22sp"
            android:text="@string/connect_title"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/line_view_white"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">
            <TextView
                style="@style/WrapContentStyle.TextViewStyle"
                android:text="@string/connect_ip"/>
            <EditText
                style="@style/WrapContentStyle.TextViewStyle"
                android:id="@+id/edit_text_ip"
                android:layout_width="match_parent"
                android:background="@drawable/login_view_bg_black"
                android:inputType="number"
                android:digits="0123456789."
                android:maxLength="15"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/WrapContentStyle.TextViewStyle"
                android:text="@string/connect_port"/>
            <EditText
                style="@style/WrapContentStyle.TextViewStyle"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:id="@+id/edit_text_port"
                android:inputType="number"
                android:maxLength="5"
                android:background="@drawable/login_view_bg_black"
                android:layout_marginRight="8dp"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"/>
            <TextView
                style="@style/WrapContentStyle.TextViewStyle"
                android:id="@+id/button_connect"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:paddingTop="6dp"
                android:paddingBottom="6dp"
                android:gravity="center"
                android:layout_marginLeft="8dp"
                android:clickable="true"
                android:background="@drawable/connect_bn_bg"
                android:text="@string/connect_button"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>